--- a/Frontend/src/app/purchase/checkout-dialog/checkout-dialog.component.html
+++ b/Frontend/src/app/purchase/checkout-dialog/checkout-dialog.component.html
@@ -3,8 +3,8 @@
 <mat-dialog-content class="text">
   <b> Positions: </b>
 <div >
-  <mat-list  *ngFor="let position of data.items"   >
-    <mat-list-item> {{position.latitude}} - {{ position.longitude}} </mat-list-item>
+  <mat-list  *ngFor="let archive of data.items"   >
+    <mat-list-item> {{archive}} </mat-list-item>
   </mat-list>
 </div>
   <b> Added to cart!</b>
