--- a/Frontend/src/app/map/map.component.html
+++ b/Frontend/src/app/map/map.component.html
@@ -7,21 +7,6 @@
   <button type="button" class="btn btn-default" [disabled]="disableAddButton" (click)="addSelectionPoint()">Add</button>
   <button type="button" class="btn btn-default"  (click)="removeAreaSelection()">Reset</button>
   <button type="button" class="btn btn-default" [disabled]="disableFinishButton" (click)="drawPolygon()">Finish</button>
-  <br/>
-  <mat-form-field appearance="fill" style="margin-top: 15px;">
-    <mat-label>Enter a date range</mat-label>
-    <mat-date-range-input [formGroup]="range" [rangePicker]="picker" >
-      <input matInput matStartDate formControlName="start" placeholder="Start date" (dateInput) = "selectDateRange()" >
-      <input matInput matEndDate formControlName="end" placeholder="End date" (dateChange) = "selectDateRange()" (dateInput) = "selectDateRange()">
-    </mat-date-range-input>
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker></mat-date-range-picker>
-    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput type="datetime-local" placeholder="start date">
-  </mat-form-field>
 </div>
     <app-purchase></app-purchase>
   </div>
@@ -31,8 +16,8 @@
   </div>
   <ng-template #Else><div leafletDraw [leafletDrawOptions]="drawOptionsDisabled"></div>
   </ng-template>
-</div>
+</div></div>
   <div>
     <app-timechart></app-timechart>
   </div>
-</div>
+
