--- a/Frontend/src/app/navbar/navbar.component.css
+++ b/Frontend/src/app/navbar/navbar.component.css
@@ -1,6 +1,11 @@
 .spacer {
   flex: 1;
 }
+@media screen and (max-width: 768px){
+  .toolbar{
+    display: none;
+  }
+}
 .toolbar {
 
   display: flex;
