--- a/Frontend/src/app/timechart/timechart.component.css
+++ b/Frontend/src/app/timechart/timechart.component.css
@@ -2,3 +2,7 @@
   max-width: 650px;
   margin: 35px auto;
 }
+.apexcharts-tooltip {
+  border-radius: 50px;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
+}
