--- a/Frontend/src/app/timechart/timechart.component.html
+++ b/Frontend/src/app/timechart/timechart.component.html
@@ -1,3 +1,23 @@
+<mat-form-field appearance="fill"  style="margin-top: 15px;">
+  <mat-label>Enter a date range</mat-label>
+  <mat-date-range-input [formGroup]="range" [rangePicker]="picker" >
+    <input matInput matStartDate formControlName="start" placeholder="Start date" (dateInput) = "selectDateRange()" >
+    <input matInput matEndDate formControlName="end" placeholder="End date" (dateChange) = "selectDateRange()" (dateInput) = "selectDateRange()">
+  </mat-date-range-input>
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-date-range-picker #picker></mat-date-range-picker>
+  <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+  <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+</mat-form-field>
+<form [formGroup]="time">
+  <mat-form-field appearance="fill">
+    <input matInput type="time" placeholder="Start time" formControlName="start" [(ngModel)]="startTime" (change)="onTimeChange()" #start/>
+  </mat-form-field><mat-form-field appearance="fill">
+  <input matInput type="time" placeholder="End time" formControlName="end" [(ngModel)]="endTime" #end/>
+</mat-form-field>
+  <span> {{startTime}}</span>
+  <span> {{endTime}}</span>
+</form>
 <div id="chart">
   <apx-chart
     [series]="chartOptions.series"
