--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -2,9 +2,9 @@
 <div class="hero-image">
   <div  class="hero-text">
     <h1>Mobile Data Marketplace</h1>
-    <p>Monetizza i tuoi dati!</p>
+    <p>Earn money with your data!</p>
+    <br>
+    <button mat-flat-button  >Shop now</button>
   </div>
-  <ng-template #other>
-    <app-account></app-account>
-  </ng-template>
 </div>
+
