--- a/Frontend/src/app/invoices/invoices.component.html
+++ b/Frontend/src/app/invoices/invoices.component.html
@@ -1,8 +1,5 @@
 <div>
-  <div class="row">
-    <button mat-icon-button (click)="goBack()" class="back-button">
-      <mat-icon aria-label="Torna indietro">arrow_back</mat-icon>
-    </button>
+  <div >
     <div class="col-md-8 offset-md-2">
         <mat-card>
           <mat-card-title>Recent Purchases</mat-card-title>
