--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <h1>Mobile Data Marketplace</h1>
     <p>Earn money with your data!</p>
     <br>
-    <button mat-flat-button  >Shop now</button>
+    <button mat-flat-button (click)="onClick()" >Shop now</button>
   </div>
 </div>
 
