--- a/Frontend/src/app/purchase/purchase.component.html
+++ b/Frontend/src/app/purchase/purchase.component.html
@@ -10,7 +10,7 @@
   </div>
  <div class="inner-container">
    <b> Total: {{totalPrice}}</b>
-   <button [disabled]="!selected" mat-flat-button color="primary" (click)="onConfirmPurchase()"><mat-icon>shopping_cart</mat-icon> Buy </button>
+   <button [disabled]="!selected" mat-flat-button color="accent" (click)="onConfirmPurchase()"><mat-icon>shopping_cart</mat-icon> Buy </button>
  </div>
 </div>
 
