--- a/Frontend/src/app/archives/archives.component.html
+++ b/Frontend/src/app/archives/archives.component.html
@@ -13,7 +13,8 @@
         <ng-container matColumnDef="Purchases">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Purchases </th>
           <td mat-cell *matCellDef="let archive">
-            <ng-container *ngIf="archive.purchases!=-1">{{archive.purchases}} </ng-container>
+            <ng-container *ngIf="archive.purchases!=-1;else ElseBlock">{{archive.purchases}} </ng-container>
+            <ng-template #ElseBlock> - </ng-template>
           </td>
         </ng-container>
         <ng-container matColumnDef="CreatedBy">
@@ -41,18 +42,18 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <div *ngIf="noArchives"> <mat-card>No Archives </mat-card></div>
-
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </mat-card-content>
   </mat-card>
+  <div>
   <mat-card>
-    <mat-card-title>Upload Archives</mat-card-title>
-    <mat-card-content>
+    <mat-card-content style="justify-content: center">
   <form [formGroup]="myForm" (ngSubmit)="onUpload()" >
   <div class="form-group">
-    <label for="file">File</label>
-    <input class="form-control" type="file" multiple formControlName="file"  id="file"
-           (change)="onFileChange($event)">
+    <button  mat-flat-button color="accent" type="button" (click)="fileInput.click()">
+      <span>Upload</span>
+      <input #fileInput type="file" multiple (change)="onFileChange($event)" formControlName="file"  id="file" style="display:none;" />
+    </button>
   </div>
     <button *ngIf="this.enableUpload" (click)="onUpload()"
             class="btn btn-success">
@@ -71,4 +72,5 @@
       <mat-icon (click)="removeFile(file)">close</mat-icon>
     </mat-list-item>
   </mat-list>
+</div>
 </div>
