--- a/Frontend/src/app/archives/archives.component.css
+++ b/Frontend/src/app/archives/archives.component.css
@@ -1,3 +1,16 @@
 table {
+  justify-content: left;
   width: 100%;
+  text-align: left;
+}
+mat-card {
+  margin: 16px;
+  width: 100%;
+}
+mat-card-title{
+  text-align: left;
+}
+.upload-button{
+  height:46px !important;
+  width:125px !important;
 }
