--- a/Frontend/src/app/invoices/invoices.component.html
+++ b/Frontend/src/app/invoices/invoices.component.html
@@ -1,6 +1,5 @@
-<div>
   <div >
-    <div class="col-md-8 offset-md-2">
+    <div >
         <mat-card>
           <mat-card-title>Recent Purchases</mat-card-title>
           <mat-card-content>
@@ -12,23 +11,23 @@
               <td mat-cell *matCellDef="let invoice"> {{invoice.id}} </td>
             </ng-container>
             <!-- Date Column -->
-            <ng-container matColumnDef="createdAt" mat-sort-header>
-              <th mat-header-cell *matHeaderCellDef> Date </th>
+            <ng-container matColumnDef="createdAt" >
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> Date </th>
               <td mat-cell *matCellDef="let invoice"> {{ invoice.createdAt*1000 | date: 'dd-MM-yyyy' }} </td>
             </ng-container>
             <!-- Amount Column -->
-            <ng-container matColumnDef="amount" mat-sort-header>
-              <th mat-header-cell *matHeaderCellDef> Amount </th>
+            <ng-container matColumnDef="amount">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
               <td mat-cell *matCellDef="let invoice"> {{invoice.amount}} </td>
             </ng-container>
             <!-- Status Column -->
-            <ng-container matColumnDef="isPaid" mat-sort-header>
-              <th mat-header-cell *matHeaderCellDef> Status </th>
+            <ng-container matColumnDef="paid" >
+              <th mat-header-cell *matHeaderCellDef  mat-sort-header> Status </th>
               <td mat-cell *matCellDef="let invoice"> {{invoice.paid ? "Paid" : "Not Paid"}} </td>
             </ng-container>
             <!-- Actions Column -->
-            <ng-container matColumnDef="actions" mat-sort-header>
-              <th mat-header-cell *matHeaderCellDef> Action </th>
+            <ng-container matColumnDef="actions" >
+              <th mat-header-cell *matHeaderCellDef > Action </th>
               <td mat-cell *matCellDef="let invoice">
                 <button (click)="detailsInvoice(invoice)" mat-icon-button color="accent" aria-label="Details">
                   <mat-icon>visibility</mat-icon>
@@ -55,4 +54,4 @@
         </mat-card>
     </div>
   </div>
-</div>
+
