--- a/Frontend/src/app/timechart/timechart.component.css
+++ b/Frontend/src/app/timechart/timechart.component.css
@@ -1,6 +1,7 @@
 #chart {
   max-width: 650px;
-  margin: 35px auto;
+  margin: 16px auto;
+  height: 400px;
 }
 .apexcharts-tooltip {
   border-radius: 50px;
@@ -9,4 +10,13 @@
 
 .apexcharts-active {
   display: none !important;
+}
+mat-form-field{
+  margin-top: 16px;
+  width: 76%;
+  text-align: center;
+}
+mat-label{
+  font-size: 24px;
+  font-weight: 500;
 }
