--- a/Frontend/src/app/timechart/timechart.component.html
+++ b/Frontend/src/app/timechart/timechart.component.html
@@ -1,5 +1,6 @@
-<mat-form-field appearance="fill"  style="margin-top: 15px;">
-  <mat-label>Enter a date range</mat-label>
+<mat-label>Enter a date range</mat-label>
+<br/>
+<mat-form-field appearance="fill" >
   <mat-date-range-input [formGroup]="range" [rangePicker]="picker" >
     <input matInput matStartDate formControlName="start" placeholder="Start date" (dateInput) = "selectDateRange()" >
     <input matInput matEndDate formControlName="end" placeholder="End date" (dateChange) = "selectDateRange()" (dateInput) = "selectDateRange()">
@@ -10,13 +11,12 @@
   <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
 </mat-form-field>
 <form [formGroup]="time">
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" style="width: 38%;">
     <input matInput type="time" placeholder="Start time" formControlName="start" [(ngModel)]="startTime" (change)="onTimeChange()" #start/>
-  </mat-form-field><mat-form-field appearance="fill">
+  </mat-form-field>
+  <mat-form-field appearance="fill" style="width: 38%; margin-bottom: 0;">
   <input matInput type="time" placeholder="End time" formControlName="end" [(ngModel)]="endTime" #end/>
 </mat-form-field>
-  <span> {{startTime}}</span>
-  <span> {{endTime}}</span>
 </form>
 <div id="chart">
   <apx-chart
