--- a/Frontend/src/app/map/map.component.html
+++ b/Frontend/src/app/map/map.component.html
@@ -22,7 +22,7 @@
     <mat-label *ngIf="this.selectedMarkers.length>0">Total selected: {{this.selectedMarkers.length}}</mat-label>
   </div>
 </div>
-<div>
-  <app-purchase></app-purchase>
+<div >
+  <app-purchase id="purchase"></app-purchase>
   </div>
 
