--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <mat-icon class="mr">{{item.icon}}</mat-icon>
     {{item.label}}
   </button>
-  <button *ngIf="false" mat-icon-button [matMenuTriggerFor]="dropMenu" fxHide fxShow.xs>
+  <button mat-icon-button [matMenuTriggerFor]="dropMenu" fxHide fxShow.xs>
     <mat-icon>more_vert</mat-icon>
   </button>
 
