--- a/Frontend/src/app/home/home.component.css
+++ b/Frontend/src/app/home/home.component.css
@@ -5,8 +5,6 @@
   /* Set a specific height */
   height: 111vh;
   /* Set negative top margin anzd z-index to go below the navbar */
-  margin-top:-64px;
-  z-index:-1;
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
@@ -18,14 +16,18 @@
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
 }
-button{
+.hero-image>button{
   width:150px;
   height:55px;
   background-color: #ffba00;
-  position: relative;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5 !important;
 }
