--- a/Frontend/src/app/archives/archive-details-dialog/archive-details-dialog.component.html
+++ b/Frontend/src/app/archives/archive-details-dialog/archive-details-dialog.component.html
@@ -10,5 +10,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="false">Close</button>
-  <button mat-button [mat-dialog-close]="data" color="accent">Remove</button>
+  <button mat-button [mat-dialog-close]="data" color="warn">Remove</button>
 </div>
